thomas-wong-website/src/css/Navbar.css
.navbar {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: white;
    color: white;
    width: 100%;
    position: sticky;
    box-shadow: 0 2px 4px 0 rgba(82, 178, 191, 0.4);
}

.brand-logo {
    height: 6rem;
    width: 100%;
}

.brand-title {
    margin-right: auto;
    margin-left: 2vh;
    padding: 2vh;
}

.navbar-links > ul {
    margin: 0;
    padding: 0;
    display: flex;
    margin-right: 1vh;
}

.navbar-links > ul > li {
    list-style: none;
}

.nav-link {
    text-decoration: none;
    color: #52B2BF;
    display: block;
    font-weight: bold;
    padding: 1rem;
}

.navbar-links > ul > li:hover {
    background-color: #F5F5F5;
    border-radius: 10px;
}

.nav-button {
    background-color: #52BF95;
    border-radius: 10px;
    border: none;
    color: white;
    padding: 1rem;
    margin-right: 3.5vh;
    width: 7rem;
    line-height: 1vh;
    justify-content: center;
}

.nav-button-link {
    text-decoration: none;
    text-align: center;
    font-weight: 800;
    color: white;
}

.nav-button:hover {
    background-color: #52B2BF;
}

.toggle-nav {
    position: absolute;
    top: 7.5vh;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
}

.toggle-nav .bar {
    height: 3px;
    width: 100%;
    background-color: #52bf95;
    border-radius: 15px;
}

@media (max-width: 710px) {
    .toggle-nav {
        display: flex;
    }

    .subTitle::before {
        content: "\A";
        white-space: pre;
    }

    .navbar-links {
        display: none;
        width: 100%;
    }

    .nav-button {
        display: none;
        margin-bottom: 0.5rem;
    }

    .navbar {
        flex-direction: column;
    }

    .navbar-links > ul {
        flex-direction: column;
        width: 100%;
        margin-left: auto;
        margin-right: auto;
    }

    .navbar-links > ul > li {
        text-align: center;
    }

    .nav-link {
        padding: 0.5rem 1rem;
    }

    .navbar-links.active {
        display: flex;
    }

    .nav-button.active {
        display: flex;
        line-height: 1vh;
        margin-left: auto;
        margin-right: auto;
    }

}

